--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,12 @@
   Hello!
   -
   Simplefolio is a clean and responsive portfolio template for Developers!
-  Created by Jacobo Martinez.
+  Created by Abdul Kudus.
   -
-  Github Repo: https://github.com/cobiwave/simplefolio/
-  Readme: https://github.com/cobiwave/simplefolio/README.md
+  Github Repo: https://github.com/Abdull-Kudus/abdull-kudus-portfolio
+  Readme: https://github.com/Abdull-Kudus/abdull-kudus-portfolio/README.md
   -
-  For business & inquires, contact me -> jacobojavier98@gmail.com
+  For business & inquires, contact me -> a.zakariam@alustudent.com
 -->
 <!DOCTYPE html>
 <html lang="en" class="sr">
@@ -22,7 +22,7 @@
     <!-- Todo: add some coding keywords below - e.g: (javascript, yourusername, etc) -->
     <meta name="keywords" content="[username], [name], skill" />
     <!-- Todo: improve your SEO by adding a small description of you -->
-    <meta name="description" content="[Your name here] | Developer" />
+    <meta name="description" content="Abdul Kudus | Developer" />
 
     <link
       rel="stylesheet"
@@ -48,7 +48,7 @@
         <h1 class="hero-title load-hidden">
           Hi, my name is <span class="text-color-main">Abdul Kudus</span>
           <br />
-          I'm a Frontent Software Developer.
+          I'm a Frontend Software Developer and a Forex Trader.
         </h1>
         <p class="hero-cta load-hidden">
           <a rel="noreferrer" class="cta-btn cta-btn--hero" href="#about"
