--- a/src/index.html
+++ b/src/index.html
@@ -48,7 +48,7 @@
         <h1 class="hero-title load-hidden">
           Hi, my name is <span class="text-color-main">Abdul Kudus</span>
           <br />
-          I'm a Frontend Software Developer and a Forex Trader.
+          I'm a Frontend Software Developer and an Entrepreneur.
         </h1>
         <p class="hero-cta load-hidden">
           <a rel="noreferrer" class="cta-btn cta-btn--hero" href="#about"
