--- a/src/index.html
+++ b/src/index.html
@@ -48,7 +48,7 @@
         <h1 class="hero-title load-hidden">
           Hi, my name is <span class="text-color-main">Abdul Kudus</span>
           <br />
-          I'm a Frontend Software Developer and an Entrepreneur.
+          I'm a Software Developer and an Entrepreneur.
         </h1>
         <p class="hero-cta load-hidden">
           <a rel="noreferrer" class="cta-btn cta-btn--hero" href="#about"
@@ -97,8 +97,8 @@
           <!-- Skills List -->
           <h3 class="about-wrapper__skill-heading">Core Technical Skills:</h3>
           <ul class="about-wrapper__skill-list">
-            <li><strong>Languages:</strong> JavaScript, TypeScript, React, UI/UX</li>
-            <li><strong>Tools:</strong> Next.js, Figma, Git, Linux, VsCode</li>
+            <li><strong>Languages:</strong> Python, JavaScript, TypeScript, React, </li>
+            <li><strong>Tools:</strong> Next.js, Figma(UI/UX), Git, Linux, VsCode</li>
             <li><strong>Software:</strong> MS Office, CorelDraw, Canva</li>
           </ul>
 
