--- a/src/index.html
+++ b/src/index.html
@@ -310,7 +310,7 @@
             rel="noreferrer"
             target="_blank"
             class="cta-btn cta-btn--resume"
-            href="mailto:a.zakariam@alustudent.com"
+            href="mailto:abdulkuduszakaria360@gmail.com"
             >Call to Action</a
           >
         </div>
