chore: add whatsApp number

--- a/src/index.html
+++ b/src/index.html
@@ -334,11 +334,14 @@
           <a rel="noreferrer" href="https://github.com/Abdull-Kudus" target="_blank">
             <i class="fa fa-github fa-inverse"></i>
           </a>
+          <a rel="noreferrer" href="https://wa.me/250795585221" target="_blank">
+            <i class="fa fa-whatsapp fa-inverse"></i>
+        </a>
         </div>
 
         <hr />
 
-        <!-- Notice: if you want to give me some credit, it will be huge for me! if not, put your data on it -->
+
         <p class="footer__text">
           © 2026 - Template developed by
           <a rel="noreferrer" href="https://github.com/Abdull-Kudus" target="_blank"
