--- a/src/index.html
+++ b/src/index.html
@@ -98,7 +98,7 @@
           <h3 class="about-wrapper__skill-heading">Core Technical Skills:</h3>
           <ul class="about-wrapper__skill-list">
             <li><strong>Languages:</strong> Python, JavaScript, TypeScript, React, </li>
-            <li><strong>Tools:</strong> Next.js, Figma(UI/UX), Git, Linux, VsCode</li>
+            <li><strong>Tools:</strong> Next.js, Nest.js, Figma(UI/UX), Git, Linux, VsCode</li>
             <li><strong>Software:</strong> MS Office, CorelDraw, Canva</li>
           </ul>
 
